--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@adonisjs/assembler": "^5.9.5",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.2.2",
-    "@types/jsonwebtoken": "^9.0.1",
+    "@types/jsonwebtoken": "9.0.1",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
@@ -42,7 +42,7 @@
     "docxtemplater": "^3.33.0",
     "google-auth-library": "^9.6.3",
     "googleapis": "^127.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "8.5.1",
     "lodash": "^4.17.21",
     "luxon": "^3.1.1",
     "node-cron": "^3.0.3",
