--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-cron": "^3.0.3",
     "openai": "^4.67.3",
     "pg": "^8.8.0",
+    "phc-bcrypt": "^1.0.8",
     "pizzip": "^3.1.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
